Switch to own docker images
As of this commit we are using own docker images to avoid fetching all
setup components each time. Furthermore, downloading the latest Gradle
version has been automated.